ex6 + matlab, .metadata ignore

--- a/ex5/omnetpp.ini
+++ b/ex5/omnetpp.ini
@@ -9,10 +9,12 @@ repeat = 10
 **.networkConfiguratorModule = ""
 **.ppp[*].numInputHooks = 1
 **.ppp[*].inputHook[0].typename = "ThruputMeter"
-**.ppp[*].inputHook[0].maxInterval = 0.001s
-**.ppp[*].inputHook[0].batchSize = 10000
+**.ppp[*].inputHook[0].maxInterval = 0.2s
+**.ppp[*].inputHook[0].batchSize = 50
 **.ppp[*].inputHook[0].**.vector-recording = true
+**.ppp[*].inputHook[0].**.scalar-recording = true
 **.vector-recording = false
+**.scalar-recording = false
 # Client settings
 **.client*.numTcpApps = 1
 **.client*.tcpApp[0].typename = "TCPSessionApp"
@@ -22,7 +24,7 @@ repeat = 10
 **.client*.tcpApp[0].connectPort = 1000
 **.client*.tcpApp[0].tOpen = 0
 **.client*.tcpApp[0].tSend = 0
-**.client*.tcpApp[0].sendBytes = 5000MiB
+**.client*.tcpApp[0].sendBytes = 1MiB
 **.client*.tcpApp[0].tClose = 0
 # Server settings
 **.server*.numTcpApps = 1
@@ -35,76 +37,4 @@ repeat = 10
 
 
 
-
-#[General]
-#network = ClientServer
-#total-stack = 7MiB
-#tkenv-plugin-path = ../../../etc/plugins
-#debug-on-errors = true
-#record-eventlog = true
-#**.server.numPcapRecorders = 1
-#**.server.pcapRecorder[0].pcapFile = "results/server.pcap"
-#**.client1.numPcapRecorders = 1
-#**.client1.pcapRecorder[0].pcapFile = "results/client1.pcap"
-
-#repeat = 1
-#**.networkConfigurationModule = ""
-
-#**.vector-recording = true
-
-#**.ppp[*].numInputHooks = 1
-#**.ppp[*].inputHook[0].typename = "ThruputMeter"
-#**.ppp[*].inputHook[0].maxInterval = 1s
-#**.ppp[*].inputHook[0].batchSize = 10000
-#**.ppp[*].inputHook[0].**.vector-recording = true
-
-
-
-
-
-## tcp apps
-#**.numTcpApps = 1
-#**.client*.tcpApp[*].typename = "TCPSessionApp"
-#**.client*.tcpApp[0].active = true
-#**.client*.tcpApp[0].localAddress = "10.0.0.1"
-#**.client*.tcpApp[0].localAddress = "192.168.1.1"
-#**.client*.tcpApp[0].localPort = -1
-#**.client*.tcpApp[0].connectAddress = "server"
-#**.client*.tcpApp[0].connectPort = 1000
-#**.client*.tcpApp[0].tOpen = 0.2s
-#**.client*.tcpApp[0].tSend = 0.4s
-#**.client*.tcpApp[0].sendBytes = 10000000B
-#**.client*.tcpApp[0].sendScript = ""
-#**.client*.tcpApp[0].tClose = 100s
-
-# tcp apps
-#**.numTcpApps = 1
-#**.client*.tcpApp[*].typename = "TCPBasicClientApp"
-#**.client*.tcpApp[0].active = true
-##**.client*.tcpApp[0].localAddress = "10.0.0.1"
-##**.client*.tcpApp[0].localAddress = "192.168.1.1"
-#**.client*.tcpApp[0].localPort = -1
-#**.client*.tcpApp[0].connectAddress = "server"
-#**.client*.tcpApp[0].connectPort = 1000
-#**.client*.tcpApp[0].tOpen = 0.2s
-#**.client*.tcpApp[0].tSend = 0.4s
-#**.client*.tcpApp[0].sendBytes = 1000000B
-#**.client*.tcpApp[0].idleInterval = 3s
-#**.client*.tcpApp[0].thinkTime = 0s
-
-
-#**.server*.tcpApp[*].typename="TCPSinkApp"
-#**.server*.tcpApp[*].typename = "TCPEchoApp"
-#**.server*.tcpApp[0].localAddress = "10.0.0.2"
-#**.server*.tcpApp[0].localAddress = "192.168.1.2"
-#**.server*.tcpApp[0].localPort = 1000
-#**.server*.tcpApp[0].echoFactor = 2.0
-#**.server*.tcpApp[0].echoDelay = 0
-
-# NIC configuration
-#**.ppp[*].queueType = "DropTailQueue" # in routers
-#**.ppp[*].queue.frameCapacity = 10  # in routers
-
-#*.configurator.networkAddress = "10.0.0.0"
-#*.configurator.config=xml("<config><interface hosts='*' address='192.168.1.x' netmask='255.255.255.0'/></config>")
 
