rename network (to CurrentNetwork)

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -3,7 +3,7 @@
 ###################################################################
 
 [General]
-network = ClientServer
+network = CurrentNetwork
 sim-time-limit = ${simtime=10, 100, 1000}s
 repeat = 10
 
@@ -20,4 +20,6 @@ repeat = 10
 **.ppp[*].inputHook[0].**.vector-recording = true
 **.vector-recording = false
 
+# The routers currently support only IP packets containing
+# TCP segments with a Maximum Segment Size (MSS) of 1000 Byte.
 **.tcp.mss = 1000
