--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -9,8 +9,8 @@ repeat = 10
 
 # Each router is output port buffered and the buffer 
 # has a maximum capacity of 40 IP packets, regardless of their size.
-**.ppp[*].queueType = DropTailQueue 
-**.ppp[*].queue.frameCapacity = 40
+#**.ppp[*].queueType = DropTailQueue 
+#**.ppp[*].queue.frameCapacity = 40
 
 **.networkConfiguratorModule = ""
 **.ppp[*].numInputHooks = 1
@@ -25,7 +25,19 @@ repeat = 10
 **.tcp.mss = 1000
 
 [Config CurrentNetwork]
+
+# user settings
+**.user[*].numUdpApps = 1
+**.user[*].udpApp[0].typename = "UDPSink"
+**.user[*].udpApp[0].localPort = 1000
+
+# internet settings
+**.internet.numUdpApps = num_users
+**.internet.udpApp[*].typename = "UDPBasicApp"
+**.internet.udpApp[*].destAddresses = "user[" + string(parentIndex()) + "]"
+**.internet.udpApp[*].destPort = 1000
 # Measurements have shown that the file size is exponentially
 # distributed with a mean value of 150 kB
-CurrentNetwork.user.fileSize = exponential(150)
-CurrentNetwork.user.delayTime = exponential(30s)
+**.internet.udpApp[*].messageLength = exponential(150 kB)
+# The pause time is also exponentially distributed with a mean of 30 s.
+**.internet.udpApp[*].sendInterval = exponential(30s)
