Fixed network setup. Added TCPBasicClientApp and TCPGenericSrvApp. Issue: No response from server

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -24,20 +24,37 @@ repeat = 10
 # TCP segments with a Maximum Segment Size (MSS) of 1000 Byte.
 **.tcp.mss = 1000
 
-[Config CurrentNetwork]
 
+
+[Config CurrentNetwork2]
+sim-time-limit = 100s
 # user settings
-**.user[*].numUdpApps = 1
-**.user[*].udpApp[0].typename = "UDPSink"
-**.user[*].udpApp[0].localPort = 1000
+**.user[*].numTcpApps = 1
+**.user[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.user[*].tcpApp[0].localPort = 2
+**.user[*].tcpApp[0].numRequestsPerSession = 2
+#**.user[*].tcpApp[0].numRequestsPerSession = exponential(5)
+**.user[*].tcpApp[0].connectAddress = "internet"
+**.user[*].tcpApp[0].connectPort = 1000
+**.user[*].tcpApp[0].requestLength = 1KiB
+**.user[*].tcpApp[0].thinkTime = 1s
+**.user[*].tcpApp[0].replyLength = exponential(150KiB)
+**.user[*].tcpApp[0].idleInterval = 1s #exponential(30s)
 
+   
 # internet settings
-**.internet.numUdpApps = num_users
-**.internet.udpApp[*].typename = "UDPBasicApp"
-**.internet.udpApp[*].destAddresses = "user[" + string(parentIndex()) + "]"
-**.internet.udpApp[*].destPort = 1000
+**.internet.numTcpApps = 1
+**.internet.tcpApp[0].typename = "TCPGenericSrvApp"
+**.internet.tcpApp[0].localPort = 1000
+# TCPNewReno ??
+#**.internet.tcpApp[0].echoFactor = 0
+
 # Measurements have shown that the file size is exponentially
 # distributed with a mean value of 150 kB
-**.internet.udpApp[*].messageLength = exponential(150 kB)
+#**.internet.udpApp[*].messageLength = exponential(150 kB)
 # The pause time is also exponentially distributed with a mean of 30 s.
-**.internet.udpApp[*].sendInterval = exponential(30s)
+#.internet.udpApp[*].sendInterval = exponential(30s)
+
+# TCPNewReno
+**.tcpType = "TCP"
+#**.tcp.tcpAlgorithmClass = "TCPNewReno"
