Fixed server not replying error. Corrected/Added some parameters.

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -20,41 +20,63 @@ repeat = 10
 **.ppp[*].inputHook[0].**.vector-recording = true
 **.vector-recording = false
 
-# The routers currently support only IP packets containing
-# TCP segments with a Maximum Segment Size (MSS) of 1000 Byte.
-**.tcp.mss = 1000
+
 
 
 
 [Config CurrentNetwork2]
 sim-time-limit = 100s
+
+# NIC configuration
+# Define a simple DropTailQueue
+**.ppp[*].queueType = "DropTailQueue"
+# The queue is supposed to buffer 40 packets/frames
+**.ppp[*].queue.frameCapacity = 40
+
+
 # user settings
+# The TCPBasicClientApp opens a connection and sends a specified number of requests
+# The requests contain the length of the response (replyLength)
+# The thinktime specifies the time between those requests.
+# When the number of requests of a session is sent, the session closes
+# After the time specified in idleInterval a new session is opened.
 **.user[*].numTcpApps = 1
 **.user[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.user[*].tcpApp[0].localPort = 2
-**.user[*].tcpApp[0].numRequestsPerSession = 2
-#**.user[*].tcpApp[0].numRequestsPerSession = exponential(5)
+**.user[*].tcpApp[0].localPort = -1
+**.user[*].tcpApp[0].numRequestsPerSession = 1
 **.user[*].tcpApp[0].connectAddress = "internet"
 **.user[*].tcpApp[0].connectPort = 1000
-**.user[*].tcpApp[0].requestLength = 1KiB
-**.user[*].tcpApp[0].thinkTime = 1s
+**.user[*].tcpApp[0].requestLength = 200B
+**.user[*].tcpApp[0].thinkTime = 0
+
+# Measurements have shown that the file size is exponentially
+# distributed with a mean value of 150 kB
 **.user[*].tcpApp[0].replyLength = exponential(150KiB)
-**.user[*].tcpApp[0].idleInterval = 1s #exponential(30s)
+# The pause time is also exponentially distributed with a mean of 30 s.
+**.user[*].tcpApp[0].idleInterval = exponential(30s)
 
    
 # internet settings
+# The TCPGenericSrvApp replys to a requests, which specifies the replylength.
+# An unlimited number of sessions can be opened.
 **.internet.numTcpApps = 1
 **.internet.tcpApp[0].typename = "TCPGenericSrvApp"
 **.internet.tcpApp[0].localPort = 1000
 # TCPNewReno ??
-#**.internet.tcpApp[0].echoFactor = 0
+**.internet.tcpApp[0].echoFactor = 0
 
-# Measurements have shown that the file size is exponentially
-# distributed with a mean value of 150 kB
-#**.internet.udpApp[*].messageLength = exponential(150 kB)
-# The pause time is also exponentially distributed with a mean of 30 s.
-#.internet.udpApp[*].sendInterval = exponential(30s)
+# This is important for the TCPGenericSrvApp to reply to the requests
+**.tcpApp[*].dataTransferMode = "object"
+# The routers currently support only IP packets containing
+# TCP segments with a Maximum Segment Size (MSS) of 1000 Byte.
+**.tcp.mss = 1000
 
 # TCPNewReno
 **.tcpType = "TCP"
-#**.tcp.tcpAlgorithmClass = "TCPNewReno"
+**.tcp.tcpAlgorithmClass = "TCPNewReno"
+# The upper bound of the congestion window is supposed to be 100
+# Alex: I'm not quite sure if this does the trick.
+**.tcp.advertisedWindow = 100
+
+
+
