--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -7,11 +7,6 @@ network = CurrentNetwork
 sim-time-limit = ${simtime=10, 100, 1000}s
 repeat = 10
 
-# Each router is output port buffered and the buffer 
-# has a maximum capacity of 40 IP packets, regardless of their size.
-#**.ppp[*].queueType = DropTailQueue 
-#**.ppp[*].queue.frameCapacity = 40
-
 **.networkConfiguratorModule = ""
 **.ppp[*].numInputHooks = 1
 **.ppp[*].inputHook[0].typename = "ThruputMeter"
@@ -20,14 +15,14 @@ repeat = 10
 **.ppp[*].inputHook[0].**.vector-recording = true
 **.vector-recording = false
 
-
-
-
-
 [Config CurrentNetwork2]
 sim-time-limit = 100s
 
 # NIC configuration
+
+# Each router is output port buffered and the buffer
+# has a maximum capacity of 40 IP packets, regardless of their size:
+
 # Define a simple DropTailQueue
 **.ppp[*].queueType = "DropTailQueue"
 # The queue is supposed to buffer 40 packets/frames
@@ -62,7 +57,6 @@ sim-time-limit = 100s
 **.internet.numTcpApps = 1
 **.internet.tcpApp[0].typename = "TCPGenericSrvApp"
 **.internet.tcpApp[0].localPort = 1000
-# TCPNewReno ??
 **.internet.tcpApp[0].echoFactor = 0
 
 # This is important for the TCPGenericSrvApp to reply to the requests
