--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -15,9 +15,6 @@ repeat = 10
 **.ppp[*].inputHook[0].**.vector-recording = true
 **.vector-recording = false
 
-[Config CurrentNetwork2]
-sim-time-limit = 100s
-
 # NIC configuration
 
 # Each router is output port buffered and the buffer
@@ -27,6 +24,10 @@ sim-time-limit = 100s
 **.ppp[*].queueType = "DropTailQueue"
 # The queue is supposed to buffer 40 packets/frames
 **.ppp[*].queue.frameCapacity = 40
+
+
+[Config CurrentNetwork]
+sim-time-limit = 100s
 
 
 # user settings
@@ -72,5 +73,56 @@ sim-time-limit = 100s
 # Alex: I'm not quite sure if this does the trick.
 **.tcp.advertisedWindow = 100
 
+
+
+[Config VoiceTest]
+sim-time-limit = 100s
+
+
+
+
+# user settings
+# The TCPBasicClientApp opens a connection and sends a specified number of requests
+# The requests contain the length of the response (replyLength)
+# The thinktime specifies the time between those requests.
+# When the number of requests of a session is sent, the session closes
+# After the time specified in idleInterval a new session is opened.
+**.user[0].numUdpApps = 2
+**.user[0].udpApp[0].typename = "VoIPApp"
+**.user[0].udpApp[0].localPort = -1
+**.user[0].udpApp[0].destPort = 1000
+**.user[0].udpApp[0].destAddresses = "user[1]"
+**.user[0].udpApp[0].sendInterval = 200ms
+**.user[0].udpApp[0].messageLength = 1000B
+**.user[0].udpApp[0].startTime = 1s
+**.user[0].udpApp[0].maxDelay = 200ms
+
+**.user[0].udpApp[1].typename = "VoIPApp"
+**.user[0].udpApp[1].localPort = 1000
+**.user[0].udpApp[1].destPort = -1
+**.user[0].udpApp[1].destAddresses = ""
+**.user[0].udpApp[1].sendInterval = 0s
+**.user[0].udpApp[1].messageLength = 0B
+**.user[0].udpApp[1].startTime = 0.5s
+**.user[0].udpApp[1].maxDelay = 200ms
+
+**.user[1].numUdpApps = 2
+**.user[1].udpApp[0].typename = "VoIPApp"
+**.user[1].udpApp[0].localPort = -1
+**.user[1].udpApp[0].destPort = 1000
+**.user[1].udpApp[0].destAddresses = "user[0]"
+**.user[1].udpApp[0].sendInterval = 200ms
+**.user[1].udpApp[0].messageLength = 1000B
+**.user[1].udpApp[0].startTime = 1s
+**.user[1].udpApp[0].maxDelay = 200ms
+
+**.user[1].udpApp[1].typename = "VoIPApp"
+**.user[1].udpApp[1].localPort = 1000
+**.user[1].udpApp[1].destPort = -1
+**.user[1].udpApp[1].destAddresses = ""
+**.user[1].udpApp[1].sendInterval = 0s
+**.user[1].udpApp[1].messageLength = 0B
+**.user[1].udpApp[1].startTime = 0.5s
+**.user[1].udpApp[1].maxDelay = 200ms
 
 
