--- a/ex7/.tkenvrc
+++ b/ex7/.tkenvrc
@@ -1,4 +1,4 @@
 # Partial OMNeT++/Tkenv config file -- see $HOME/.tkenvrc as well
-config default-configname	{CurrentNetwork2}
+config default-configname	{VoiceTest}
 config default-runnumber	{0}
 
