trying out stuff

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -82,42 +82,35 @@ sim-time-limit = 100s
 # The thinktime specifies the time between those requests.
 # When the number of requests of a session is sent, the session closes
 # After the time specified in idleInterval a new session is opened.
-**.user[0].numUdpApps = 2
-**.user[0].udpApp[0].typename = "VoIPApp"
-**.user[0].udpApp[0].localPort = -1
-**.user[0].udpApp[0].destPort = 1000
-**.user[0].udpApp[0].destAddresses = "user[1]"
-**.user[0].udpApp[0].sendInterval = 200ms
-**.user[0].udpApp[0].messageLength = 1000B
-**.user[0].udpApp[0].startTime = 1s
-**.user[0].udpApp[0].maxDelay = 200ms
 
-**.user[0].udpApp[1].typename = "VoIPApp"
-**.user[0].udpApp[1].localPort = 1000
-**.user[0].udpApp[1].destPort = -1
-**.user[0].udpApp[1].destAddresses = ""
-**.user[0].udpApp[1].sendInterval = 0s
-**.user[0].udpApp[1].messageLength = 0B
-**.user[0].udpApp[1].startTime = 0.5s
-**.user[0].udpApp[1].maxDelay = 200ms
+# two udp apps: one to send and one to receive VoIP traffic
+**.user[*].numUdpApps = 2
 
-**.user[1].numUdpApps = 2
-**.user[1].udpApp[0].typename = "VoIPApp"
-**.user[1].udpApp[0].localPort = -1
-**.user[1].udpApp[0].destPort = 1000
-**.user[1].udpApp[0].destAddresses = "user[0]"
-**.user[1].udpApp[0].sendInterval = 200ms
-**.user[1].udpApp[0].messageLength = 1000B
-**.user[1].udpApp[0].startTime = 1s
-**.user[1].udpApp[0].maxDelay = 200ms
+# sender app
+**.user[*].udpApp[0].typename = "VoIPApp"
+**.user[*].udpApp[0].localPort = -1
+**.user[*].udpApp[0].destPort = 1000
+# users can call anyone (including themselves :D)
+#list of addresses, seperated by spaces
+**.user[*].udpApp[0].destAddresses = "user[1] user[12] user[23]"
+**.user[*].udpApp[0].sendInterval = 200ms
+**.user[*].udpApp[0].messageLength = 1000B
+**.user[*].udpApp[0].startTime = 1s
+**.user[*].udpApp[0].maxDelay = 200ms
+**.user[*].udpApp[0].idleInterval = 23
 
-**.user[1].udpApp[1].typename = "VoIPApp"
-**.user[1].udpApp[1].localPort = 1000
-**.user[1].udpApp[1].destPort = -1
-**.user[1].udpApp[1].destAddresses = ""
-**.user[1].udpApp[1].sendInterval = 0s
-**.user[1].udpApp[1].messageLength = 0B
-**.user[1].udpApp[1].startTime = 0.5s
-**.user[1].udpApp[1].maxDelay = 200ms
+# receiver app
+**.user[*].udpApp[1].typename = "VoIPApp"
+**.user[*].udpApp[1].localPort = 1000
+**.user[*].udpApp[1].destPort = -1
+**.user[*].udpApp[1].destAddresses = ""
+**.user[*].udpApp[1].sendInterval = 0s
+**.user[*].udpApp[1].messageLength = 0B
+**.user[*].udpApp[1].startTime = 0.5s
+**.user[*].udpApp[1].maxDelay = 200ms
+
+# TODO: Decide on a reasonable number of active VoIP clients. 
+# Think about the influence of their position within the network 
+# on the link utilization.
 
 
