Fixed EndToEndDelay issues. Cleaned voip setup.

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -13,7 +13,7 @@ repeat = 10
 **.ppp[*].inputHook[0].maxInterval = 0.001s
 **.ppp[*].inputHook[0].batchSize = 10000
 **.ppp[*].inputHook[0].**.vector-recording = true
-**.vector-recording = false
+#**.vector-recording = false
 
 # NIC configuration
 
@@ -42,6 +42,7 @@ sim-time-limit = 100s
 **.user[*].tcpApp[0].numRequestsPerSession = 1
 **.user[*].tcpApp[0].connectAddress = "internet"
 **.user[*].tcpApp[0].connectPort = 1000
+# Maybe use ?8KiB? for requestLength according to maximum http 1.0 get request size
 **.user[*].tcpApp[0].requestLength = 200B
 **.user[*].tcpApp[0].thinkTime = 0
 
@@ -78,7 +79,7 @@ sim-time-limit = 100s
 [Config VoiceTest]
 sim-time-limit = 100s
 
-
+**.vector-recording = true
 
 
 # user settings
@@ -87,42 +88,29 @@ sim-time-limit = 100s
 # The thinktime specifies the time between those requests.
 # When the number of requests of a session is sent, the session closes
 # After the time specified in idleInterval a new session is opened.
-**.user[0].numUdpApps = 2
-**.user[0].udpApp[0].typename = "VoIPApp"
-**.user[0].udpApp[0].localPort = -1
-**.user[0].udpApp[0].destPort = 1000
+
+# General Setup for voice
+**.user[*].numUdpApps = 2
+**.user[*].udpApp[0].typename = "VoIPApp"
+**.user[*].udpApp[0].localPort = -1
+**.user[*].udpApp[0].destPort = 1000
+**.user[*].udpApp[0].sendInterval = 20ms
+**.user[+].udpApp[0].messageLength = 32B
+**.user[*].udpApp[0].startTime = 1s
+**.user[*].udpApp[0].maxDelay = 200ms
+
+**.user[*].udpApp[1].typename = "VoIPApp"
+**.user[*].udpApp[1].localPort = 1000
+**.user[*].udpApp[1].destPort = -1
+**.user[*].udpApp[1].destAddresses = ""
+**.user[*].udpApp[1].sendInterval = 0s
+**.user[*].udpApp[1].messageLength = 0B
+**.user[*].udpApp[1].startTime = 0.5s
+**.user[*].udpApp[1].maxDelay = 200ms
+
+#Individual connections of udp apps
 **.user[0].udpApp[0].destAddresses = "user[1]"
-**.user[0].udpApp[0].sendInterval = 200ms
-**.user[0].udpApp[0].messageLength = 1000B
-**.user[0].udpApp[0].startTime = 1s
-**.user[0].udpApp[0].maxDelay = 200ms
+**.user[7].udpApp[0].destAddresses = "user[0]"
 
-**.user[0].udpApp[1].typename = "VoIPApp"
-**.user[0].udpApp[1].localPort = 1000
-**.user[0].udpApp[1].destPort = -1
-**.user[0].udpApp[1].destAddresses = ""
-**.user[0].udpApp[1].sendInterval = 0s
-**.user[0].udpApp[1].messageLength = 0B
-**.user[0].udpApp[1].startTime = 0.5s
-**.user[0].udpApp[1].maxDelay = 200ms
-
-**.user[1].numUdpApps = 2
-**.user[1].udpApp[0].typename = "VoIPApp"
-**.user[1].udpApp[0].localPort = -1
-**.user[1].udpApp[0].destPort = 1000
-**.user[1].udpApp[0].destAddresses = "user[0]"
-**.user[1].udpApp[0].sendInterval = 200ms
-**.user[1].udpApp[0].messageLength = 1000B
-**.user[1].udpApp[0].startTime = 1s
-**.user[1].udpApp[0].maxDelay = 200ms
-
-**.user[1].udpApp[1].typename = "VoIPApp"
-**.user[1].udpApp[1].localPort = 1000
-**.user[1].udpApp[1].destPort = -1
-**.user[1].udpApp[1].destAddresses = ""
-**.user[1].udpApp[1].sendInterval = 0s
-**.user[1].udpApp[1].messageLength = 0B
-**.user[1].udpApp[1].startTime = 0.5s
-**.user[1].udpApp[1].maxDelay = 200ms
 
 
