user_connector.py create regular voip connections (WIP)
connections on access and gateway levels done, backbone TBD

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -106,10 +106,11 @@ sim-time-limit = 100s
 **.user[*].udpApp[1].maxDelay = 200ms
 
 #Individual connections of udp apps
-**.user[0].udpApp[0].destAddresses = "user[1]"
-**.user[7].udpApp[0].destAddresses = "user[0]"
 
-
+# NOTE: First generate worst case user interconnections manually by shell:
+# ./user_connector.py -voip -b <backbones> -a <access_routers_per_bb> -u <users_per_access_router>
+#    e.g.: ./user_connector.py -voip -b 2 -a 1 -u 2
+include user_connections_voicetest.ini
 
 
 
