--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -92,7 +92,7 @@ sim-time-limit = 100s
 **.user[*].udpApp[0].localPort = -1
 **.user[*].udpApp[0].destPort = 1000
 **.user[*].udpApp[0].sendInterval = 20ms
-**.user[+].udpApp[0].messageLength = 32B
+**.user[*].udpApp[0].messageLength = 32B
 **.user[*].udpApp[0].startTime = 1s
 **.user[*].udpApp[0].maxDelay = 200ms
 
