Fixed voip packet size (32 Payload + 12 RTP). Fixed advertisedWindow

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -71,7 +71,7 @@ sim-time-limit = 100s
 **.tcp.tcpAlgorithmClass = "TCPNewReno"
 # The upper bound of the congestion window is supposed to be 100
 # Alex: I'm not quite sure if this does the trick.
-**.tcp.advertisedWindow = 100
+**.tcp.advertisedWindow = 14*this.mss
 
 
 [Config VoiceTest]
@@ -158,13 +158,13 @@ include user_connections_voicetest.ini
 **.tcp.tcpAlgorithmClass = "TCPNewReno"
 # The upper bound of the congestion window is supposed to be 100
 # Alex: I'm not quite sure if this does the trick.
-**.tcp.advertisedWindow = 100
+**.tcp.advertisedWindow = 14*this.mss
 
 
 #CurrentNetwork.num_bb 
-*.num_bb = 2
-*.num_access_per_bb = 2
-*.num_user_per_access = 2
+*.num_bb = 5
+*.num_access_per_bb = 5
+*.num_user_per_access = 25
 # REMEMBER TO MANUALLY EXECUTE THE CONNECTOR SCRIPT
 
 # user settings
@@ -173,7 +173,7 @@ include user_connections_voicetest.ini
 **.user[*].udpApp[0].localPort = 1000
 **.user[*].udpApp[0].destPort = 1000
 **.user[*].udpApp[0].sendInterval = 200ms
-**.user[*].udpApp[0].messageLength = 1000B
+**.user[*].udpApp[0].messageLength = 44B
 **.user[*].udpApp[0].startTime = 1s
 **.user[*].udpApp[0].maxDelay = 200ms
 
