Fixed tcp standalone setup

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -40,9 +40,8 @@ sim-time-limit = 100s
 **.user[*].tcpApp[0].localPort = -1
 **.user[*].tcpApp[0].numRequestsPerSession = 1
 **.user[*].tcpApp[0].connectAddress = "internet"
-**.user[*].tcpApp[0].connectPort = 1000
-# Maybe use ?8KiB? for requestLength according to maximum http 1.0 get request size
-**.user[*].tcpApp[0].requestLength = 200B
+**.user[*].tcpApp[0].connectPort = 80
+**.user[*].tcpApp[0].requestLength = 8KiB
 **.user[*].tcpApp[0].thinkTime = 0
 
 # Measurements have shown that the file size is exponentially
@@ -57,7 +56,7 @@ sim-time-limit = 100s
 # An unlimited number of sessions can be opened.
 **.internet.numTcpApps = 1
 **.internet.tcpApp[0].typename = "TCPGenericSrvApp"
-**.internet.tcpApp[0].localPort = 1000
+**.internet.tcpApp[0].localPort = 80
 **.internet.tcpApp[0].echoFactor = 0
 
 # This is important for the TCPGenericSrvApp to reply to the requests
@@ -72,6 +71,13 @@ sim-time-limit = 100s
 # The upper bound of the congestion window is supposed to be 100
 # Alex: I'm not quite sure if this does the trick.
 **.tcp.advertisedWindow = 14*this.mss
+
+
+#CurrentNetwork.num_bb 
+*.num_bb = 5
+*.num_access_per_bb = 5
+*.num_user_per_access = 25
+# REMEMBER TO MANUALLY EXECUTE THE CONNECTOR SCRIPT
 
 
 [Config VoiceTest]
@@ -116,7 +122,7 @@ include user_connections_voicetest.ini
 
 
 [Config Simultaneous]
-
+sim-time-limit = 100s
 # user settings
 # The TCPBasicClientApp opens a connection and sends a specified number of requests
 # The requests contain the length of the response (replyLength)
