Moved voiptest ini to simultanious config

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -186,6 +186,6 @@ sim-time-limit = 100s
 # Generate worst case user interconnections manually by shell:
 # ./user_connector.py -b <backbones> -a <access_routers_per_bb> -u <users_per_access_router>
 #    e.g.: ./user_connector.py -b 2 -a 1 -u 2
-include user_connections.ini
+include user_connections_voicetest.ini
 
 
