Set simulation time to 300s and repeat to 16

--- a/ex7/omnetpp.ini
+++ b/ex7/omnetpp.ini
@@ -4,8 +4,6 @@
 
 [General]
 network = CurrentNetwork
-sim-time-limit = ${simtime=10, 100, 1000}s
-repeat = 10
 
 **.networkConfiguratorModule = ""
 **.ppp[*].numInputHooks = 1
@@ -27,8 +25,9 @@ repeat = 10
 
 
 [Config CurrentNetwork]
-sim-time-limit = 100s
-
+sim-time-limit = 300s
+repeat = 16
+**.vector-recording = false
 # user settings
 # The TCPBasicClientApp opens a connection and sends a specified number of requests
 # The requests contain the length of the response (replyLength)
@@ -122,7 +121,8 @@ sim-time-limit = 100s
 
 
 [Config Simultaneous]
-sim-time-limit = 100s
+sim-time-limit = 500s
+repeat = 12
 # user settings
 # The TCPBasicClientApp opens a connection and sends a specified number of requests
 # The requests contain the length of the response (replyLength)
