add TCP app to send some data

--- a/ex_8/omnetpp.ini
+++ b/ex_8/omnetpp.ini
@@ -30,3 +30,27 @@ network = WirelessNetwork_Switch
 **.wlan[*].mac.retryLimit = 7
 **.wlan[*].mac.cwMinData = 7
 **.wlan[*].mac.cwMinMulticast = 31
+
+# send stuff from A to B:
+
+## TCP settings
+**.tcpType = "TCP"
+**.tcp.advertisedWindow = 22*this.mss
+**.tcp.mss = 1460
+
+## "Client" settings
+**.Station_A.numTcpApps = 1
+**.Station_A.tcpApp[0].typename = "TCPSessionApp"
+**.Station_A.tcpApp[0].active = true
+**.Station_A.tcpApp[0].localPort = -1
+**.Station_A.tcpApp[0].connectAddress = "Station_B"
+**.Station_A.tcpApp[0].connectPort = 1000
+**.Station_A.tcpApp[0].tOpen = 0
+**.Station_A.tcpApp[0].tSend = 0
+**.Station_A.tcpApp[0].sendBytes = 1MiB
+**.Station_A.tcpApp[0].tClose = 0
+
+## "Server" settings
+**.Station_B.numTcpApps = 1
+**.Station_B.tcpApp[0].typename = "TCPSinkApp"
+**.Station_B.tcpApp[0].localPort = 1000
