extend simtime & repeats

--- a/ex_8/omnetpp.ini
+++ b/ex_8/omnetpp.ini
@@ -1,6 +1,9 @@
 [General]
 network = WirelessNetwork_Switch
 
+sim-time-limit = ${simtime=10, 100, 1000}s
+repeat = 10
+
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
 **.constraintAreaMinZ = 0m
