add router network

--- a/ex_8/omnetpp.ini
+++ b/ex_8/omnetpp.ini
@@ -1,6 +1,4 @@
 [General]
-network = WirelessNetwork_Switch
-
 sim-time-limit = ${simtime=10, 100, 1000}s
 repeat = 10
 
@@ -57,3 +55,9 @@ repeat = 10
 **.Station_B.numTcpApps = 1
 **.Station_B.tcpApp[0].typename = "TCPSinkApp"
 **.Station_B.tcpApp[0].localPort = 1000
+
+[Config WirelessNetwork_Switch]
+network = WirelessNetwork_Switch
+
+[Config WirelessNetwork_Router]
+network = WirelessNetwork_Router
