increase simtime, switch to VoIP-App

--- a/ex_8/omnetpp.ini
+++ b/ex_8/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-sim-time-limit = ${simtime=10, 100, 1000}s
+sim-time-limit = ${simtime=1000, 3000, 10000}s
 repeat = 10
 
 **.constraintAreaMinX = 0m
@@ -34,27 +34,27 @@ repeat = 10
 
 # send stuff from A to B:
 
-## TCP settings
-**.tcpType = "TCP"
-**.tcp.advertisedWindow = 22*this.mss
-**.tcp.mss = 1460
+# sender settings
+**.Station_A.numUdpApps = 1
+**.Station_A.udpApp[0].typename = "VoIPApp"
+**.Station_A.udpApp[0].localPort = 1000
+**.Station_A.udpApp[0].destPort = 1000
+**.Station_A.udpApp[0].sendInterval = 200ms
+**.Station_A.udpApp[0].messageLength = 44B
+**.Station_A.udpApp[0].startTime = 1s
+**.Station_A.udpApp[0].maxDelay = 200ms
+**.Station_A.udpApp[0].destAddresses = "Station_B"
 
-## "Client" settings
-**.Station_A.numTcpApps = 1
-**.Station_A.tcpApp[0].typename = "TCPSessionApp"
-**.Station_A.tcpApp[0].active = true
-**.Station_A.tcpApp[0].localPort = -1
-**.Station_A.tcpApp[0].connectAddress = "Station_B"
-**.Station_A.tcpApp[0].connectPort = 1000
-**.Station_A.tcpApp[0].tOpen = 0
-**.Station_A.tcpApp[0].tSend = 0
-**.Station_A.tcpApp[0].sendBytes = 1MiB
-**.Station_A.tcpApp[0].tClose = 0
-
-## "Server" settings
-**.Station_B.numTcpApps = 1
-**.Station_B.tcpApp[0].typename = "TCPSinkApp"
-**.Station_B.tcpApp[0].localPort = 1000
+# receiver settings
+**.Station_B.numUdpApps = 1
+**.Station_B.udpApp[0].typename = "VoIPApp"
+**.Station_B.udpApp[0].localPort = 1000
+**.Station_B.udpApp[0].destPort = 1000
+**.Station_B.udpApp[0].sendInterval = 200ms
+**.Station_B.udpApp[0].messageLength = 44B
+**.Station_B.udpApp[0].startTime = 1s
+**.Station_B.udpApp[0].maxDelay = 200ms
+**.Station_B.udpApp[0].destAddresses = "Station_A"
 
 [Config WirelessNetwork_Switch]
 network = WirelessNetwork_Switch
