add static routes to WirelessNetwork_Router config

--- a/ex_8/omnetpp.ini
+++ b/ex_8/omnetpp.ini
@@ -61,3 +61,7 @@ network = WirelessNetwork_Switch
 
 [Config WirelessNetwork_Router]
 network = WirelessNetwork_Router
+
+**.networkConfiguratorModule = "" # ?
+# set static routes
+**.Router.routingFile                          = "StaticRoutes.irt"
