add param_13 to omnetpp.ini, fill in some blanks (WIP)

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,6 +1,22 @@
 [General]
+network = Network
+# TODO: choose sensible values
 sim-time-limit = ${simtime=1000, 3000, 10000}s
 repeat = 10
+
+# [TODO] - CCTV camera stream:
+#  - activated for one team member
+#  - deactivated for the other team member
+
+# some can be enabled if desired, but
+# this produces a lot of data
+**.thruputMeter.**.vector-recording = true	
+# disable all others
+**.vector-recording = false
+
+# throughputmeter: Best is to undo the code change recommended in exercise 6
+**.maxInterval = 1s	# interval for the throughputmeters
+**.batchSize = 10000 # batch size for the throughputmeters
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -8,21 +24,32 @@ repeat = 10
 **.constraintAreaMaxX = 600m
 **.constraintAreaMaxY = 400m
 **.constraintAreaMaxZ = 0m
-**.channelNumber = 0
-**.mobilityType = "StationaryMobility"
-**.mobility.initFromDisplayString = false
-**.AccessPoint.mobility.initialX = 20m
-**.AccessPoint.mobility.initialY = 20m
-**.AccessPoint.mobility.initialZ = 0m
-**.Station_A.mobility.initialX = 15m
-**.Station_A.mobility.initialY = 15m
-**.Station_A.mobility.initialZ = 0m
 
-# channel physical parameters
-*.channelControl.carrierFrequency = 2.4GHz
-*.channelControl.pMax = 20mW
-*.channelControl.sat = -110dBm
-*.channelControl.alpha = 2
+**.channelNumber = 0
+# "the students usually do not move with their laptop 
+# and can be considered stationary"
+**.mobilityType = StationaryMobility
+**.mobility.initFromDisplayString = false
+**.AccessPoint.mobility.initialX = 25
+**.AccessPoint.mobility.initialY = 25
+**.AccessPoint.mobility.initialZ = 0m
+# "all wireless users are uniformly distributed in a 400m^2
+# *quadratic* area around the AccessPoint" (so not as in ex 3.6))
+# TODO: note that mobile stations also include ftp and video laptop!
+**.[names of mobile stations].mobility.initialX = uniform(20m)
+**.[names of mobile stations].mobility.initialY = uniform(20m)
+**.[names of mobile stations].mobility.initialZ = 0m
+
+# Some tcp settings
+**.tcpType = "TCP"
+**.tcp.tcpAlgorithmClass = TCPNewReno
+**.tcp.windowScalingSupport = true
+**.tcpApp[*].dataTransferMode = "object"
+**.tcp.mss =
+**.tcp.advertisedWindow = # do not use this.mss here but directly give a number
+
+# Routing
+**.networkConfiguratorModule = ""
 
 # NIC settings
 **.mac.address = "auto"
@@ -31,31 +58,12 @@ repeat = 10
 **.wlan[*].mac.retryLimit = 7
 **.wlan[*].mac.cwMinData = 7
 **.wlan[*].mac.cwMinMulticast = 31
+**.opMode = "g"
+**.mgmt.frameCapacity = 100
 
-# send stuff from A to B:
-
-# sender settings
-**.Station_A.numUdpApps = 1
-**.Station_A.udpApp[0].typename = "VoIPApp"
-**.Station_A.udpApp[0].localPort = 1000
-**.Station_A.udpApp[0].destPort = 1000
-**.Station_A.udpApp[0].sendInterval = 200ms
-**.Station_A.udpApp[0].messageLength = 44B
-**.Station_A.udpApp[0].startTime = 1s
-**.Station_A.udpApp[0].maxDelay = 200ms
-**.Station_A.udpApp[0].destAddresses = "Station_B"
-
-# receiver settings
-**.Station_B.numUdpApps = 1
-**.Station_B.udpApp[0].typename = "VoIPApp"
-**.Station_B.udpApp[0].localPort = 1000
-**.Station_B.udpApp[0].destPort = 1000
-**.Station_B.udpApp[0].sendInterval = 200ms
-**.Station_B.udpApp[0].messageLength = 44B
-**.Station_B.udpApp[0].startTime = 1s
-**.Station_B.udpApp[0].maxDelay = 200ms
-**.Station_B.udpApp[0].destAddresses = "Station_A"
-
+# Group specific parameters
+**.[name of web browsing laptop].tcpApp[0].replyLength = # from trace file trace_13.txt
+**.[name of web browsing laptop].tcpApp[0].idleInterval = exponential(20s)
 
 **.networkConfiguratorModule = "" # ?
 # set static routes
